--- a/02-분류.Rmd
+++ b/02-분류.Rmd
@@ -1,4 +1,4 @@
-# 사료작물의분류  
+# 사료작물의 분류 {#classification}
 
 무질서 하게 보이는 자연현상을 실험과 관측을 통하여 어떤 규칙이나 질서를 밝혀냄으로서 인간의 일상생활을 보다 안정적이고 무지의 공포로부터 해방 시키는 것이 자연과학의 궁극적 목적인 것처럼 사료작물을 이해함에 있어 그 첫걸음은 인간이 이해하기 쉽게 질서정연하게 구분하고(분류) 이름짓는 일(명명)일 것이다.
 그 첫번째 단계가 바로 여러사람이 쉽게 이해하고 수긍할 수 있는 기준과 방법에 의해 분류하는 것이다. 따라서 그 분류 방법과 기준은 사람에 따라, 지역에 따라 달라질 수도 있으며, 학문적 발달과 체계의 변화에 조금씩 변하기도 한다. 또 의해서 세계 모든 사람이 공통으로 사용할 수 있는 분류법도 있다.
