change the header into English

--- a/docs/forage-science.tex
+++ b/docs/forage-science.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={초지 및 사료작물학},
+            pdftitle={Forage science},
             pdfauthor={조무환, 나영준},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -77,7 +77,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{초지 및 사료작물학}
+  \title{Forage science}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{조무환, 나영준}
@@ -85,7 +85,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-02-19}
+    \date{2019-02-26}
 
 \usepackage{booktabs}
 
@@ -96,13 +96,16 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-Welcome!
+\chapter*{Welcome}\label{welcome}
+\addcontentsline{toc}{chapter}{Welcome}
 
-\chapter{서론}\label{intro}
+초지 및 사료작물학 강의자료
+
+\chapter{Introduction}\label{intro}
 
 서론
 
-\chapter{사료작물의 분류}\label{classification}
+\chapter{Classification}\label{classification}
 
 무질서 하게 보이는 자연현상을 실험과 관측을 통하여 어떤 규칙이나 질서를
 밝혀냄으로서 인간의 일상생활을 보다 안정적이고 무지의 공포로부터 해방
@@ -194,7 +197,7 @@ green chop), 다즙질 사초(succulent forage crop), 목초(pasture plants)
   屬 이상의 분류군 이름은 한 단어로된 일명법(一名法, uninomial)을 쓴다.
 \end{itemize}
 
-\chapter{벼과 및 콩과작물}\label{legumeandgrass}
+\chapter{Grass and legume}\label{legumeandgrass}
 
 \section{벼과 사료작물}\label{-}
 
@@ -259,11 +262,9 @@ green chop), 다즙질 사초(succulent forage crop), 목초(pasture plants)
   포복경(匍匐莖, 땅위기는줄기, Stolons)이 있는 초종
 \end{itemize}
 
-\chapter{사료작물의식별}
+\chapter{Distinguishment}\label{distinguishment}
 
-\chapter{종자생산}
-
-종자 생산
+\chapter{Seed production}\label{seed-production}
 
 \bibliography{book.bib,packages.bib}
 
