--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "초지 및 사료작물학"
+title: "Forage science"
 author: "조무환, 나영준"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -7,10 +7,12 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "초지 및 사료작물학"
+description: "Forage science"
 ---
 
-Welcome!
+# Welcome {-}
+
+초지 및 사료작물학 강의자료
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
