--- a/docs/forage-science.tex
+++ b/docs/forage-science.tex
@@ -25,7 +25,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Forage science},
-            pdfauthor={조무환, 나영준},
+            pdfauthor={김명화, 조무환, 나영준},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -80,12 +80,12 @@
   \title{Forage science}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{조무환, 나영준}
+    \author{김명화, 조무환, 나영준}
     \preauthor{\centering\large\emph}
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-02-26}
+    \date{2019-03-05}
 
 \usepackage{booktabs}
 
@@ -99,11 +99,37 @@
 \chapter*{Welcome}\label{welcome}
 \addcontentsline{toc}{chapter}{Welcome}
 
-초지 및 사료작물학 강의자료
+초지 및 사료작물학 강의자료입니다.
 
 \chapter{Introduction}\label{intro}
 
-서론
+사료는 가축이나 가금 따위에게 주는 먹이를 말한다. 가축이 생명유지 및
+생산활동에 필요로 하는 각종 영양소를 함유하고 있는 유기 또는 무기의
+물질로 일반적으로 조사료, 농후사료, 특수사료로 나눈다(축산학적 의미).
+「축산법」에 따른 가축이나 그 밖에 농림축산식품부장관이 정하여 고시하는
+동물·어류 등에 영양이 되거나 그 건강유지 또는 성장에 필요한 것으로서
+단미사료·배합사료 및 보조사료를 말한다. 다만, 동물용의약으로서 섭취하는
+것을 제외한다(사료관리법).
+
+\section{풀사료}
+
+\begin{itemize}
+\item
+  조사료(粗飼料, bulky feed, roughage)는 **``지방, 단백질, 전분 등의
+  함량이 적고 섬유질이 18\% 이상 되는 사료, 청초, 건초 따위로** 반대는
+  농후사료(濃厚飼料, concentrates)이다.
+\item
+  조사료(forage, roughage)는 ``가축의 사료 중 일반적으로 부피에 비하여
+  가소화영양소 함량이 적고 섬유질이 많은 사료의 총칭, 이에는 각종
+  짚류(straw), 건초류(hay), 생초류와 청예작물 그리고 사일리지와 근채류
+  등이 포함된다'' (영양사료 용어집, 1995, 한국영양사료학회)
+\item
+  조사료는 짚(straws), 대(stover), 깍지 및 식물부산물 등으로 지방,
+  단백질, 전분 등의 함량이 적고 섬유질이 18\%이상인 풀사료
+\item
+  \textbf{풀사료는 조사료, 양질조사료, 기타 식물성 잎과 줄기 등을 모두
+  포함하는 사료}
+\end{itemize}
 
 \chapter{Classification}\label{classification}
 
